# geoai-ombria-robustness

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: ombria_robustness.yaml
docs/: CONFIRMATORY_PROTOCOL.md  DATA.md  KAGGLE.md  QUALITY_GATED_FUSION_V3_PROTOCOL.md  QUALITY_MAP_UNCERTAINTY_FULL_RUNBOOK.md  QUALITY_MAP_UNCERTAINTY_KAGGLE.md  QUALITY_MAP_UNCERTAINTY_PROTOCOL.md  REPOSITORY_CHECKLIST.md  REPRODUCIBILITY.md  RESULTS.md  SENSOR_STATE_V2_PROTOCOL.md  SMAGNET_ADAPTATION_PROTOCOL.md
manifests/: quality_uncertainty_core_equivalence.json  quality_uncertainty_smagnet_full_seed7_authorization.json  quality_uncertainty_smagnet_smoke_authorization.json  quality_uncertainty_smoke_authorization.json  sen1floods11_scl_manifest.json
notebooks/: kaggle_confirmatory_full.ipynb  kaggle_confirmatory_smoke.ipynb  kaggle_quality_gated_v3_full.ipynb  kaggle_quality_gated_v3_smoke.ipynb  kaggle_quality_uncertainty_full_seed13.ipynb  kaggle_quality_uncertainty_full_seed21.ipynb  kaggle_quality_uncertainty_full_seed29.ipynb  kaggle_quality_uncertainty_full_seed37.ipynb  kaggle_quality_uncertainty_full_seed7.ipynb  kaggle_quality_uncertainty_smagnet_full_seed13.ipynb  kaggle_quality_uncertainty_smagnet_full_seed7.ipynb  kaggle_quality_uncertainty_smagnet_smoke.ipynb  kaggle_quality_uncertainty_smoke.ipynb  kaggle_sensor_state_v2_full.ipynb  kaggle_sensor_state_v2_smoke.ipynb
scripts/: analyze_ombria_robustness.py  analyze_publication_baselines.py  analyze_quality_uncertainty_core.py  audit_quality_uncertainty_artifact.py  (+49 more)
(+50 files in other folders)
